--- a/spices/cix-openssh.org
+++ b/spices/cix-openssh.org
@@ -1,6 +1,6 @@
 # File           : cix-openssh.org
 # Created        : <2016-11-13 Sun 19:25:52 GMT>
-# Last Modified  : <2016-11-14 Mon 22:13:37 GMT> sharlatan
+# Last Modified  : <2016-11-25 Fri 00:23:10 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s)  :
 # Short          :
@@ -25,20 +25,61 @@ date in terms of security and features.
 This package includes  the core files necessary for both  the OpenSSH client and
 server. To  make this package  useful, you should also  install openssh-clients,
 openssh-server, or both.
-
 ----
 
-** Index
+* Index
 #+BEGIN_EXAMPLE
-scp (1)              - secure copy (remote file copy program)
-sftp (1)             - secure file transfer program
-slogin (1)           - OpenSSH SSH client (remote login program)
-ssh (1)              - OpenSSH SSH client (remote login program)
-ssh-add (1)          - adds private key identities to the authentication agent
-ssh-agent (1)        - authentication agent
-ssh-copy-id (1)      - use locally available keys to authorise logins on a remote machine
-ssh-keyscan (1)      - gather ssh public keys
+    scp (1)         - secure copy (remote file copy program)
+    sftp (1)        - secure file transfer program
+    slogin (1)      - OpenSSH SSH client (remote login program)
+    ssh (1)         - OpenSSH SSH client (remote login program)
+    ssh-add (1)     - adds private key identities to the authentication agent
+    ssh-agent (1)   - authentication agent
+    ssh-copy-id (1) - use locally available keys to authorise logins on a remote machine
+    ssh-keyscan (1) - gather ssh public keys
 #+END_EXAMPLE
-** Receipts
 
-** References
+* Receipts
+** scp                                                                          :cmd:
+*** scp::options
+*** scp::examples
+*** scp::files
+*** scp::see-also
+** sftp                                                                         :cmd:
+*** sftp::options
+*** sftp::examples
+*** sftp::files
+*** sftp::see-also
+** slogin                                                                       :cmd:
+*** slogin::options
+*** slogin::examples
+*** slogin::files
+*** slogin::see-also
+** ssh                                                                          :cmd:
+*** ssh::options
+*** ssh::examples
+*** ssh::files
+*** ssh::see-also
+** ssh-add                                                                      :cmd:
+*** ssh-add::options
+*** ssh-add::examples
+*** ssh-add::files
+*** ssh-add::see-also
+** ssh-agent                                                                    :cmd:
+*** ssh-agent::options
+*** ssh-agent::examples
+*** ssh-agent::files
+*** ssh-agent::see-also
+** ssh-copy-id                                                                  :cmd:
+*** ssh-copy-id::options
+*** ssh-copy-id::examples
+*** ssh-copy-id::files
+*** ssh-copy-id::see-also
+** ssh-keyscan                                                                  :cmd:
+*** ssh-keyscan::options
+*** ssh-keyscan::examples
+*** ssh-keyscan::files
+*** ssh-keyscan::see-also
+
+
+* References
