[E] Options and condition fix in exmaple

--- a/spices/cix-tcpdump.org
+++ b/spices/cix-tcpdump.org
@@ -1,6 +1,6 @@
 # File           : cix-tcpdump.org
 # Created        : <2016-11-07 Mon 23:06:06 GMT>
-# Last Modified  : <2016-11-26 Sat 21:58:35 GMT> sharlatan
+# Last Modified  : <2016-11-27 Sun 23:56:31 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s)  :
 # Short          :
@@ -31,6 +31,17 @@ Install tcpdump if you need a program to monitor network traffic.
 #+END_EXAMPLE
 
 * Receipts
+** tcpdump                                                                      :cmd:
+*** tcpdump::options
+| D  | available interfaces                  |
+| i  | interface                             |
+| n  | don't resolve hostnames               |
+| c  | count of number packages              |
+| S  | absolute sequence numbres             |
+| X  | contents in hex and ASCII             |
+| q  | less verbose                          |
+| nn | don't resolve hostnames or part names |
+*** tcpdump::examples
 - tcpdump-161126180824 :: cpapture active hosts on any interfaces for 10s on the
      network:
   #+BEGIN_SRC sh
@@ -40,14 +51,15 @@ Install tcpdump if you need a program to monitor network traffic.
     TIME_STAMP="$(date +%Y%m%d%H%M%S)"
     DUMP_FILE="tcpdump_dmp"
 
-    [ "$UID" != "0" ] && exit 1
+    [[ "$UID" != "0" ]] && exit 1
     echo "Start capturing at $TIME_STAMP"
-    timeout 10 tcpdump -nnvvXS -i any > "$DUMP_FILE" 2>/dev/null
+    timeout 10 tcpdump -nnvvS -i any > "$DUMP_FILE" 2>/dev/null
 
     (echo "QTY IP";
      grep -oP "$IPV4_RE" "$DUMP_FILE"\
          | sort -n \
          | uniq -c \
          | sort -rn) | column -t
+
   #+END_SRC
-  [[file:./cix-gnu-bash-builtin.org::*echo][echo]], [[file:./cix-gnu-grep.org::*grep][grep (1)]], [[file:./cix-gnu-core-utilities.org::*sort][sort (1)]], [[file:./cix-gnu-core-utilities.org::*uniq][uniq (1)]], [[file:./cix-util-linux.org::*column][column (1)]], [[file:./cix-gnu-core-utilities.org::*timeout][timeout (1)]]
+     [[file:./cix-gnu-bash-builtin.org::*echo][echo]], [[file:./cix-gnu-grep.org::*grep][grep (1)]], [[file:./cix-gnu-core-utilities.org::*sort][sort (1)]], [[file:./cix-gnu-core-utilities.org::*uniq][uniq (1)]], [[file:./cix-util-linux.org::*column][column (1)]], [[file:./cix-gnu-core-utilities.org::*timeout][timeout (1)]]
